--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,9 +1,12 @@
 {
     "application.organization.name": "Bundesamt für Informatik und Telekommunikation BIT",
     "application.title": "Covid-Zertifikat",
-    "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den Daten.",
-    "bulk.revocation.link": "Mehrere Zertifikate speren",
-    "bulk.revocation.title": "Mehrere Zertifikate speren",
+    "bulk.revocation.file.upload": "Zertifikate sperren",
+    "bulk.revocation.instructions": "Sie können hier mehrere Zertifikate sperren. Laden Sie dazu bitte die CSV-Datei mit den entsprechenden Daten hoch.",
+    "bulk.revocation.link": "Mehrere Zertifikate sperren",
+    "bulk.revocation.success": "Die Zertifikate wurden erfolgreich widerrufen.",
+    "bulk.revocation.title": "Mehrere Zertifikate sperren",
+    "bulk.revocation.warning": "Nicht alle Sperrungen waren erfolgreich. Bitte prüfen Sie die generierte CSV-Datei, um Details zu erfahren.",
     "certificateCreate.form.group.personalData": "Personalien",
     "certificateCreate.form.group.recovery": "Genesung",
     "certificateCreate.form.group.test": "Test",
@@ -16,7 +19,7 @@
     "certificateCreate.form.label.personalData.firstName": "Vorname",
     "certificateCreate.form.label.personalData.specialDate": "Spezielles Format",
     "certificateCreate.form.label.personalData.surName": "Nachname",
-    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Es handelt sich <u>nicht</u> um eine nachträgliche Ausstellung</strong> eines Covid-19-Zertifikates. <strong>Ich bestätige hiermit, dass die originale Krankengeschichte bzw. Primärdokumentation bei mir vorliegt</strong> und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann. ",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Es handelt sich um eine Ausstellung</strong> eines Covid-19-Zertifikates aufgrund der eigenen Primärdokumentation (keine Nachweise von Dritten). <strong>Ich bestätige hiermit, dass für die Ausstellung des Covid-Zertifikats die originale Krankengeschichte bzw. Primärdokumentation bei mir vorliegt</strong> und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann.",
     "certificateCreate.form.label.radio.retroactive": "<strong>Es handelt sich um eine nachträgliche Ausstellung</strong> eines Covid-19-Zertifikats <strong>ohne originale Krankengeschichte bzw. Primärdokumentation.</strong> \nFür eine im Ausland erhaltene Impfung oder durchgemachte Erkrankung nur für Personen gem. Art. 7 Abs. 1 Bst. b der Verordnung Covid-Zertifikate (Aufenthaltsrecht in der Schweiz). <strong>Ich bestätige hiermit, dass ich vom Kanton für die Behandlung solcher Anträge speziell bezeichnet wurde</strong> (Art. 7 der Verordnung Covid-Zertifikate) und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann. \nDetails dazu siehe Art. 7 der Verordnung Covid-Zertifikate <a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/de#art_7\">(https://www.fedlex.admin.ch/eli/cc/2021/325/de#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten positiven Resultats",
@@ -161,7 +164,6 @@
     "otp.link": "One-Time-Password generieren",
     "otp.title": "Neues One-Time-Password generieren",
     "report.link": "Report",
-    "reports.a1.title": "",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
     "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
@@ -193,26 +195,28 @@
     "reports.a9.description.long": "<strongWie viele Zertifikate der verschiedenen Zertifikatstypen wurden bisher über den gesamten Ausstellungszeitraum über welche Kanäle ausgestellt?></strong></br></br>Dieser Report liefert Ihnen die Gesamtanzahl der ausgestellten Zertifikate eines Typs und die Kanäle, über welche sie ausgestellt wurden.",
     "reports.a9.description.short": "Gesamtanzahl Zertifikate eines Typs im gesamten Ausstellungszeitraum, gegliedert nach Ausstellkanal.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "Sie möchten einen Verdachtsfall entdecken? Wählen Sie dazu einen Aggregationsreport.",
-    "reports.aggregation.info": "Es wird ein Report erstellt, der statistische Werte über einen bestimmten Zeitraum ausweist. Verdächtige Werte können auf einen allfälligen Missbrauchsfall von einzelnen Aussteller/innen oder Organisationen hinweisen.",
-    "reports.aggregation.title": "Aggregation",
-    "reports.detail.header": "Sie möchten einen Verdachtsfall analysieren? Wählen Sie dazu einen Detailreport.",
-    "reports.detail.info": "In einem konkreten Verdachtsfall wird ein Report erstellt, der jede einzelne Aktion einer Ausstellerin oder eines Ausstellers oder einer ausstellenden Organisation ausweist. Mit dem Nachweis kann der konkrete Missbrauchsfall widerlegt oder bewiesen werden.",
-    "reports.detail.title": "Detail",
+    "reports.aggregation.header": "Sie möchten prüfen, ob die Zahlen zur Zertifikatsausstellung in Ihrem Kanton auf einen allfälligen Missbrauchsfall hinweisen? Erstellen Sie dazu einen Aggregationsreport.",
+    "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
     "reports.generate": "Report generieren",
-    "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, finden Sie hier zu jedem Parameter eine Erklärung.",
+    "reports.generation.info": "Ihre Abfrage wird ausgeführt und der Report erstellt. Bei grossen Datenmengen, kann dies mehrere Minuten in Anspruch nehmen. Wir bitten Sie um etwas Geduld. Achtung: Bitte schliessen Sie dieses Fenster während dieser Zeit nicht und machen Sie keinen Reload, da das Erstellen des Reports dadurch abgebrochen wird.",
+    "reports.generation.success": "Vielen Dank für Ihre Geduld. Der Report ist nun fertiggestellt und steht Ihnen zum Download zur Verfügung.",
+    "reports.generation.success.title": "Ihr Report wurde generiert",
+    "reports.generation.success.warning": "Bitte beachten Sie, dass nicht für alle Suchparameter Daten gefunden oder ausgegeben werden konnten. Für detailliertere Hinweise prüfen Sie den erstellten Report.",
+    "reports.generation.title": "Ihr Report wird generiert",
+    "reports.generation.too-big": "Die Anzahl Datensätze, die den Suchkriterien entsprechen ist zu gross und die Abfrage kann nicht abgeschlossen werden.\nBitte schränken Sie die Suche weiter ein.",
+    "reports.generation.too-big.title": "Fehler",
+    "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, wird hier jeder Parameter erklärt.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
-    "reports.statistic.header": "Sie möchten eine statistische Auswertung? Wählen Sie dazu einen Statistikreport.",
-    "reports.statistic.info": "Mit dem Statistikreport werden die Gesamtzahlen der in der Schweiz erstellten Covid-Zertifikaten pro Zertifikatstyp ausgewiesen.",
-    "reports.statistic.title": "Statistik",
+    "reports.statistic.header": "Sie möchten einen allgemeinen Überblick über die Zertifikatsausstellung in der Schweiz in Form einer statistischen Auswertung erhalten? Erstellen Sie dazu einen Statistikreport.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
-    "reports.uvci.format.error": "Die UVCI muss imFormat urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
+    "reports.uvci.format.error": "Die UVCI muss im Format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx sein.",
     "reports.uvci.info": "Bitte geben Sie die UVCI des Zertifikats ein.</br>Falls Sie mehrere UVCI gleichzeitig überprüfen lassen möchten, können Sie diese mit Leerschlag, Enter oder Komma trennen.",
+    "reports.uvci.too-many": "Es sind maximal 100 Einträge erlaubt",
     "support.instructions": "Sollten Sie Probleme mit dem CSV Upload haben, wenden Sie sich bitte an den BIT-Helpdesk:",
     "support.instructionsUpdated": "Sollten Sie technische Probleme mit der Ausstellung haben, können Sie sich an den BIT-Helpdesk wenden.",
     "support.title": "Support",
-    "upload.file.noneSelected": "Kein CSV Datei ausgewählt.",
+    "upload.file.noneSelected": "Keine CSV Datei ausgewählt.",
     "upload.file.select": "CSV Datei auswählen",
     "upload.file.select.limit": "Maximale Grösse: 40 Kb. Maximale Einträge: 100",
     "upload.file.upload": "Zertifikate generieren",
@@ -231,5 +235,6 @@
     "validation.error.http.480": "UVCI wurde bereits gesperrt",
     "validation.error.http.482": "Das CSV konnte nicht verarbeitet werden aufgrund einer ungültigen Grösse. Es müssen 1 bis 100 Einträge enthalten sein.",
     "validation.error.http.485": "Eine oder mehrere der Anfragen in der CSV enthalten ungültige Daten. Für detailliertere Fehlermeldungen prüfen Sie die zurückgegebene CSV Datei.",
-    "validation.error.http.489": "Ungültiges Geburtsdatum. Bitte überprüfen Sie Ihre Eingabe in Schritt zwei."
+    "validation.error.http.489": "Ungültiges Geburtsdatum. Bitte überprüfen Sie Ihre Eingabe in Schritt zwei.",
+    "validation.error.http.497": "Ihre Datei enthält Duplikate. Es wurden keine Zertifikate revoziert. Bitte korrigieren Sie die Datei und wiederholen Sie den Vorgang."
 }
