--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,9 +1,12 @@
 {
     "application.organization.name": "Office fédéral de l'informatique et de la télécommunication OFIT",
     "application.title": "Certificat COVID",
+    "bulk.revocation.file.upload": "Verrouiller des certificats",
     "bulk.revocation.instructions": "Vous pouvez révoquer plusieurs certificats. Pour ce faire, veuillez charger le fichier CSV contenant les données.",
     "bulk.revocation.link": "Verrouiller plusieurs certificats",
+    "bulk.revocation.success": "La révocation des certificats a été traitée avec succès.",
     "bulk.revocation.title": "Verrouiller plusieurs certificats",
+    "bulk.revocation.warning": "Toutes les révocations n'ont pas abouti. Veuillez vérifier le CSV retourné pour connaître les détails.",
     "certificateCreate.form.group.personalData": "Données personnelles",
     "certificateCreate.form.group.recovery": "Guérison",
     "certificateCreate.form.group.test": "Test",
@@ -16,7 +19,7 @@
     "certificateCreate.form.label.personalData.firstName": "Prénom",
     "certificateCreate.form.label.personalData.specialDate": "Format inhabituel",
     "certificateCreate.form.label.personalData.surName": "Nom",
-    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Il ne s’agit <u>pas</u></strong> d’un certificat COVID-19 <strong>établi ultérieurement. Par la présente, je confirme être en possession de l’original du dossier médical ou de la documentation primaire</strong> et je m’engage à documenter l’identifiant unique ainsi que les données/preuves présentées de manière à garantir la possibilité de vérifier la légitimité du certificat établi à tout moment par la suite. ",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Il s’agit</strong> d’un certificat COVID-19 <strong>établi</strong> sur la base de la documentation primaire personnelle (pas de preuves fournies par des tiers). <strong>Par la présente, je confirme être en possession de l’original du dossier médical ou de la documentation primaire</strong> et je m’engage à documenter l’identifiant unique ainsi que les données/preuves présentées de manière à garantir la possibilité de vérifier la légitimité du certificat établi à tout moment par la suite.",
     "certificateCreate.form.label.radio.retroactive": "<strong>Il s’agit</strong> d’un certificat COVID-19 <strong>établi ultérieurement, sans l’original du dossier médical ni documentation primaire</strong>. \nDans ce cas, l’établissement d’un certificat pour une vaccination administrée à l’étranger ou pour une guérison attestée à l'étranger n’est possible que pour les personnes visées à l’art. 7, al. 1, let. b de l'ordonnance COVID-19 certificats, (titulaires d’un droit de séjour en Suisse). <strong>Par la présente, je confirme avoir reçu l’habilitation du canton pour traiter de telles demandes</strong> (art. 7 de l'ordonnance COVID-19 certificats) et je m’engage à documenter l’identifiant unique ainsi que les données/preuves présentées de manière à garantir la possibilité de vérifier la légitimité du certificat établi à tout moment par la suite. \nVoir l’art. 7 de l'ordonnance COVID-19 certificats pour les détails <a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/fr#art_7\">(https://www.fedlex.admin.ch/eli/cc/2021/325/fr#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Pays où le test a été effectué",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date du premier résultat positif",
@@ -109,9 +112,9 @@
     "dashboard.otp.action": "Générer un One-Time-Password",
     "dashboard.otp.description": "Vous pouvez ici générer un nouvel One-Time-Password. Vous avez besoin du mot du One-Time-Password pour pouvoir générer automatiquement des certificats Covid avec votre system primaire (par exemple, le système d'information du cabinet, le logiciel de la clinique ou la solution pour pharmaciens). Le One-Time-Password est valable pendant 12 heures.",
     "dashboard.otp.title": "Générer un nouvel One-Time-Password",
-    "dashboard.reports.action": "",
-    "dashboard.reports.description": "",
-    "dashboard.reports.title": "",
+    "dashboard.reports.action": "Générer le rapport",
+    "dashboard.reports.description": "Vous pouvez générer un rapport ici.",
+    "dashboard.reports.title": "Rapport",
     "dashboard.upload.action": "Générer plusieurs certificats",
     "dashboard.upload.description": "Vous pouvez générer ici plusieurs certificats.",
     "dashboard.upload.title": "Générer plusieurs certificats",
@@ -160,8 +163,7 @@
     "otp.key": "Clé secrète",
     "otp.link": "Générer un One-Time-Password",
     "otp.title": "Générer un nouvel One-Time-Password",
-    "report.link": "",
-    "reports.a1.title": "",
+    "report.link": "Rapport",
     "reports.a10.description.long": "<strong>Quels émetteurs ont délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés.",
     "reports.a10.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
     "reports.a11.description.long": "<strong>Quels certificats ont été révoqués pendant une période donnée?</strong></br></br>Ce rapport vous fournit une liste de tous les certificats révoqués pendant la période demandée dans le canton sélectionné. Veuillez noter que la période de révocation ne correspond pas à la période d’émission des certificats.",
@@ -172,7 +174,7 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Qui a délivré ce certificat spécifique, quand et par quel canal d’émission, et de quel type de certificat s’agissait-il?</strong></br></br>Après saisie de l'UVCI, ce rapport vous fournit des informations sur l’émetteur, la date et le canal d’émission ainsi que le type de certificat recherché. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
     "reports.a2.description.short": "Informations détaillées (canal d’émission, émetteur, date et type de certificat) sur une UVCI de certificat spécifique. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
-    "reports.a2.reset-input": "",
+    "reports.a2.reset-input": "Rétablir la saisie",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Combien de certificats de quel type un émetteur spécifique a-t-il délivrés dans une période donnée et par quels canaux?</strong></br></br>Ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a3.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
@@ -193,22 +195,24 @@
     "reports.a9.description.long": "<strong>Combien de certificats des différents types ont été délivrés à ce jour, et par quels canaux, sur l’ensemble de la période d’émission ?</strong></br></br>Ce rapport vous fournit le nombre total de certificats délivrés pour un type donné et les canaux par lesquels ils ont été délivrés.",
     "reports.a9.description.short": "Nombre total de certificats d’un type donné, ventilé par canal d’émission, pour l’ensemble de la période d’émission.",
     "reports.a9.title": "A9",
-    "reports.aggregation.header": "",
-    "reports.aggregation.info": "Un rapport est généré, qui présente des valeurs statistiques sur une période donnée. Des valeurs suspectes peuvent indiquer un éventuel abus de la part de certains émetteurs ou organisations.",
-    "reports.aggregation.title": "Agrégation",
-    "reports.detail.header": "",
-    "reports.detail.info": "Dans un cas concret de suspicion, un rapport est établi, qui indique chaque action individuelle d’un émetteur ou d’une organisation émettrice. Cette preuve permet de réfuter ou d’attester l’abus concret. ",
-    "reports.detail.title": "Détail",
-    "reports.generate": "",
-    "reports.param-help.description": "",
-    "reports.param-help.download": "",
-    "reports.param-help.title": "",
-    "reports.statistic.header": "",
-    "reports.statistic.info": "Le rapport statistique présente le nombre total de certificats COVID générés en Suisse par type de certificat.",
-    "reports.statistic.title": "Statistiques",
+    "reports.aggregation.header": "Vous souhaitez vérifier si le nombre de certificats établis dans votre canton révèle d’éventuels abus ? Rédigez un rapport d’agrégation.",
+    "reports.detail.header": "Vous souhaitez confirmer ou infirmer un soupçon concret en analysant les activités d’un émetteur précis ? Rédigez un rapport de détail.",
+    "reports.generate": "Générer le rapport",
+    "reports.generation.info": "Votre requête est en cours d’exécution et le rapport est généré. Si la quantité de données est importante, cela peut prendre plusieurs minutes. Nous vous prions de faire preuve de patience. Attention : veuillez ne pas fermer cette fenêtre pendant le processus de création et ne pas faire de nouveau téléchargement, car cela interromprait la création du rapport.",
+    "reports.generation.success": "Merci de votre patience. Le rapport est maintenant terminé et peut être téléchargé.",
+    "reports.generation.success.title": "Génération des données réussie",
+    "reports.generation.success.warning": "Attention : les données n’ont pas pu être trouvées ou générées pour tous les paramètres de recherche. Pour de plus amples informations, veuillez consulter le rapport établi.",
+    "reports.generation.title": "Génération du rapport en cours",
+    "reports.generation.too-big": "Le nombre de données correspondant aux critères de recherche est trop important, et la requête ne peut pas être terminée. Veuillez restreindre davantage votre recherche.",
+    "reports.generation.too-big.title": "Erreur",
+    "reports.param-help.description": "Si vous avez des questions concernant les paramètres, ils sont tous expliqués ici.",
+    "reports.param-help.download": "Télécharger l’aide",
+    "reports.param-help.title": "Aide sur les paramètres",
+    "reports.statistic.header": "Vous souhaitez obtenir un aperçu global des certificats émis en Suisse sous forme d’une évaluation statistique ? Rédigez un rapport statistique.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
-    "reports.uvci.format.error": "",
-    "reports.uvci.info": "",
+    "reports.uvci.format.error": "L’UVCI doit être rédigé au format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
+    "reports.uvci.info": "Veuillez indiquer l’UVCI du certificat.\nSi vous souhaitez faire vérifier plusieurs UVCI à la fois, séparez-les avec une espace, un retour à la ligne (touche Enter) ou une virgule.",
+    "reports.uvci.too-many": "Un maximum de 100 entrées est autorisé",
     "support.instructions": "Si vous rencontrez des problèmes avec l'envoi de CSV, veuillez contacter le helpdesk de l'OFIT:",
     "support.instructionsUpdated": "Si vous rencontrez des problèmes techniques pour émettre des certificats Covid, veuillez contacter le Helpdesk de l'OFIT.",
     "support.title": "Support",
@@ -231,5 +235,6 @@
     "validation.error.http.480": "UVCI déjà verrouillé",
     "validation.error.http.482": "Le CSV n'a pas été traité en raison d'une taille non valide. Il doit contenir de 1 à 100 entrées.",
     "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné.",
-    "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2."
+    "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2.",
+    "validation.error.http.497": "Votre fichier contient des doublons. Aucun certificat n'a été révoqué. Veuillez corriger le fichier et répéter la procédure."
 }
