--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,9 @@
     "dashboard.invalidateCertificate.description": "You can revoke generated certificates here. Revoked certificates are declared invalid and can no longer be used.",
     "dashboard.invalidateCertificate.title": "Revoke certificate",
     "dashboard.link": "Dashboard",
+    "dashboard.notificationsManagement.action": "Edit notification",
+    "dashboard.notificationsManagement.description": "Here notifications can be created, edited and deleted.",
+    "dashboard.notificationsManagement.title": "Notifications",
     "dashboard.otp.action": "Generate One-Time-Password",
     "dashboard.otp.description": "You can generate a new One-Time-Password here. You need the One-Time-Password to be able to automatically generate Covid certificates with your primary system (e.g. practice information system, clinic software or pharmacist solution). The One-Time-Password is valid for 12 hours.",
     "dashboard.otp.title": "Generate new One-Time-Password",
@@ -182,12 +185,36 @@
     "i18n.validation.notIssuableInSwitzerland": "The selected vaccine is not authorised in Switzerland.",
     "i18n.validation.rapidDateTooSmall": "Date of sample collection can't be before 01.10.2022.",
     "i18n.validation.required": "Mandatory field",
+    "i18n.validation.startDateAfterEndDate": "Start date must not be after the end date",
     "i18n.validation.time": "A valid time is needed (e.g. 14:30)",
     "i18n.validation.timeAfterToday": "The date cannot be in the future",
     "i18n.validation.timeInvalid": "A valid time is needed (e.g. 14:30)",
     "logout": "Logout",
     "notifications.unsupportedBrowser.message": "Some functions of this application are not supported by your browser. Please note that only the two latest versions of Chrome, Firefox, Edge and Safari are supported",
     "notifications.unsupportedBrowser.title": "Unsupported Browser",
+    "notificationsManagement.cancel": "Cancel",
+    "notificationsManagement.delete": "Delete",
+    "notificationsManagement.delete.title": "Do you want to delete the notification?\n",
+    "notificationsManagement.noNotifications": "There are no notifications yet.\n",
+    "notificationsManagement.notification.content": "Text",
+    "notificationsManagement.notification.content.de": "German",
+    "notificationsManagement.notification.content.en": "English",
+    "notificationsManagement.notification.content.fr": "French",
+    "notificationsManagement.notification.content.it": "Italian",
+    "notificationsManagement.notification.end": "End time\n",
+    "notificationsManagement.notification.isClosable": "Closable",
+    "notificationsManagement.notification.start": "Heure de début\t",
+    "notificationsManagement.notification.type": "Type",
+    "notificationsManagement.notification.type.info": "Information",
+    "notificationsManagement.notification.type.warning": "Warning",
+    "notificationsManagement.period": "Period",
+    "notificationsManagement.save": "Save",
+    "notificationsManagement.startDateBeforeEndDate": "Start date must not be after the end date",
+    "notificationsManagement.success.delete": "Notification has been deleted\n",
+    "notificationsManagement.success.saved": "Notification has been saved\n",
+    "notificationsManagement.title": "Notifications",
+    "notificationsManagement.title.create": "Create notification\n",
+    "notificationsManagement.title.edit": "Edit notifications",
     "otp.button.copy": "Copy to the clipboard",
     "otp.button.create": "Generate private key",
     "otp.instructions": "You can generate a private key here and copy it to the clipboard.",
