--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -110,6 +110,9 @@
     "dashboard.invalidateCertificate.description": "Qui è possibile bloccare i certificati creati. I certificati revocati sono dichiarati non validi e non possono più essere utilizzati.",
     "dashboard.invalidateCertificate.title": "Bloccare un certificato",
     "dashboard.link": "Dashboard",
+    "dashboard.notificationsManagement.action": "Elaborare notifiche\t",
+    "dashboard.notificationsManagement.description": "Qui è possibile creare, elaborare e cancellare notifiche.",
+    "dashboard.notificationsManagement.title": "Notifiche",
     "dashboard.otp.action": "Genera One-Time-Password",
     "dashboard.otp.description": "Qui puoi generare una nuova One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password generata è valida per 12 ore.",
     "dashboard.otp.title": "Generare una nuova One-Time-Password",
@@ -182,12 +185,36 @@
     "i18n.validation.notIssuableInSwitzerland": "Il vaccino selezionato non è autorizzato in Svizzera.",
     "i18n.validation.rapidDateTooSmall": "La data del prelievo non può essere anteriore al 01.10.2022.",
     "i18n.validation.required": "Campo obbligatorio",
+    "i18n.validation.startDateAfterEndDate": "La data di inizio non deve essere successiva alla data di fine",
     "i18n.validation.time": "È richiesta un'ora valida (e.g. 14:30)",
     "i18n.validation.timeAfterToday": "La data non deve essere nel futuro",
     "i18n.validation.timeInvalid": "È richiesta un'ora valida (e.g. 14:30)",
     "logout": "Logout",
     "notifications.unsupportedBrowser.message": "Il browser non è compatibile con alcune funzioni dell'applicazione. Tali funzioni sono supportate soltanto nelle due versioni più recenti di Chrome, Firefox, Edge e Safari.",
     "notifications.unsupportedBrowser.title": "Browser non supportato",
+    "notificationsManagement.cancel": "Annullare",
+    "notificationsManagement.delete": "Cancellare",
+    "notificationsManagement.delete.title": "Cancellare la notifica?\t",
+    "notificationsManagement.noNotifications": "Non vi sono ancora notifiche.\t",
+    "notificationsManagement.notification.content": "Contenuto",
+    "notificationsManagement.notification.content.de": "Tedesco",
+    "notificationsManagement.notification.content.en": "Inglese",
+    "notificationsManagement.notification.content.fr": "Francese",
+    "notificationsManagement.notification.content.it": "Italiano",
+    "notificationsManagement.notification.end": "Ora di fine\t",
+    "notificationsManagement.notification.isClosable": "Richiudibile",
+    "notificationsManagement.notification.start": "Ora di inizio\t",
+    "notificationsManagement.notification.type": "Tipo",
+    "notificationsManagement.notification.type.info": "Informazione",
+    "notificationsManagement.notification.type.warning": "Avviso",
+    "notificationsManagement.period": "Periodo",
+    "notificationsManagement.save": "Salvare",
+    "notificationsManagement.startDateBeforeEndDate": "La data di inizio non deve essere successiva alla data di fine",
+    "notificationsManagement.success.delete": "Notifica cancellata\t",
+    "notificationsManagement.success.saved": "Notifica salvata\t",
+    "notificationsManagement.title": "Notifiche",
+    "notificationsManagement.title.create": "Creare notifiche\t",
+    "notificationsManagement.title.edit": "Elaborare notifiche\t",
     "otp.button.copy": "Copia negli appunti",
     "otp.button.create": "Crea chiave segreta",
     "otp.instructions": "Qui è possibile creare una chiave segreta e copiarla negli appunti.",
